examples/networking/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
  labels:
    app: nginx-app
  annotations:
    cloud.google.com/load-balancer-type: External
    external-dns.alpha.kubernetes.io/hostname: "k8s-pine.p10e.io"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-app
